<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintTop_toTopOf="parent">
        <HorizontalScrollView
            android:paddingHorizontal="26dp"
            android:clipToPadding="false"
            android:layout_gravity="bottom|end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView"
                android:layout_gravity="end"
                android:layout_marginEnd="26dp"
                android:textColor="@color/white"
                android:textSize="80sp"
                android:text="@string/EnterLine"
                android:maxLines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </HorizontalScrollView>

    </FrameLayout>
<LinearLayout
    android:id="@+id/container"
    app:layout_constraintBottom_toBottomOf="parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:paddingVertical="6dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/LightGray.Button"
            android:id="@+id/reset"
            android:text="@string/ACButton"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            style="@style/LightGray.Button"
            android:onClick="onSignChangeClick"
            android:text="@string/PlusMinusButton"
            android:layout_marginHorizontal="16dp"/>
        <com.google.android.material.button.MaterialButton
            style="@style/LightGray.Button"
            android:text="@string/Precentage"
            android:onClick="onPercentageClick"
            android:layout_marginEnd="16dp"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Orange.Button"
            android:id="@+id/divison"
            android:onClick="onOperationClick"
            android:text="@string/Slash" />
    </LinearLayout>
    <LinearLayout
        android:paddingVertical="6dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Gray.Button"
            android:onClick="onNumberClick"
            android:text="@string/Seven" />
        <com.google.android.material.button.MaterialButton
            style="@style/Gray.Button"
            android:onClick="onNumberClick"
            android:text="@string/Eight"
            android:layout_marginHorizontal="16dp"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Gray.Button"
            android:onClick="onNumberClick"
            android:text="@string/Nine"
            android:layout_marginEnd="16dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiplication"
            style="@style/Orange.Button"
            android:onClick="onOperationClick"
            android:text="@string/Multiplication" />
    </LinearLayout>
    <LinearLayout
        android:paddingVertical="6dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Gray.Button"
            android:text="@string/four"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Gray.Button"
            android:text="@string/five"
            android:onClick="onNumberClick"
            android:layout_marginHorizontal="16dp"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Gray.Button"
            android:text="@string/six"
            android:onClick="onNumberClick"
            android:layout_marginEnd="16dp"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Orange.Button"
            android:id="@+id/minus"
            android:onClick="onOperationClick"
            android:text="@string/minus" />
    </LinearLayout>
    <LinearLayout
        android:paddingVertical="6dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Gray.Button"
            android:text="@string/one"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Gray.Button"
            android:text="@string/two"
            android:onClick="onNumberClick"
            android:layout_marginHorizontal="16dp"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Gray.Button"
            android:onClick="onNumberClick"
            android:text="@string/three"
            android:layout_marginEnd="16dp"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Orange.Button"
            android:id="@+id/plus"
            android:onClick="onOperationClick"
            android:text="@string/plus" />
    </LinearLayout>
    <LinearLayout
        android:paddingVertical="6dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Gray.Button"
            android:text="@string/zero"
            android:onClick="onNumberClick"
            android:layout_width="178dp"
            android:paddingStart="32dp"
            android:textAlignment="textStart"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/floatingNumber"
            style="@style/Gray.Button"
            android:onClick="onNumberClick"
            android:text="@string/floatingPoint"
            android:layout_marginHorizontal="16dp"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Orange.Button"
            android:id="@+id/equal"
            android:onClick="onOperationClick"
            android:text="@string/equal" />
    </LinearLayout>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>